it kinda works, but doesnt migrate n:m yet